--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@
 }
 
 .main:before {
-  background: #23272a;
+  background: #36393f;
   position: absolute;
   content: "";
   z-index: 2;
@@ -39,7 +39,7 @@
   opacity: 0.4;
   filter: invert(1);
 }
-
+/*
 .gradient {
   height: fit-content;
   z-index: 3;
@@ -60,11 +60,20 @@
   content: "";
   width: 100%;
   height: 100%;
-  filter: blur(100px) saturate(150%);
+  filter: blur(100px) saturate(600%);
   top: 80px;
   opacity: 0.15;
 }
+*/
+.gradient {
+  height: fit-content;
+  z-index: 3;
+  width: 100%;
+  max-width: 640px;
+  background-color: #202225;
+background-image: linear-gradient(0deg, #202225 0%, #5865f2 100%);
 
+}
 
 @media screen and (max-width: 640px) {
   .main {
@@ -118,7 +127,7 @@
 }
 
 .glassmorphism {
-  @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
+  @apply rounded-xl border border-gray-200 bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
 }
 
 .prompt_layout {
@@ -141,7 +150,7 @@
 
 /* Nav Component */
 .logo_text {
-  @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
+  @apply max-sm:hidden font-satoshi font-semibold text-lg text-white tracking-wide;
 }
 
 .dropdown {
